--- a/index.html
+++ b/index.html
@@ -3,70 +3,52 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My Habits</title>
+  <title>Minhas tarefas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/main.css">
 </head>
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-    </div>
+    <a class="navbar-brand" href="#">Minhas Tarefas</a>
+    <button type="button" class="btn-add btn btn-primary">Adicionar</button>
   </nav>
 
   <div class="container">
-    <ul class="habit-list list-group list-group-flush">
-      <li id="1" class="habit list-group-item">Cras justo odio <i class="action delete fas fa-trash"></i></li>
-      <li id="2" class="habit list-group-item">Dapibus ac facilisis in <i class="action delete fas fa-trash"></i></li>
-      <li id="3" class="habit list-group-item">Morbi leo risus <i class="action delete fas fa-trash"></i></li>
-      <li id="4" class="habit list-group-item">Porta ac consectetur ac <i class="action delete fas fa-trash"></i></li>
-      <li id="5" class="habit list-group-item">Vestibulum at eros <i class="action delete fas fa-trash"></i></li>
-    </ul>
-
-    <button type="button" class="btn btn-primary btn-new-habit">New Habit</button>
-  </div>
-
-  <div class="modal modal-deletation-confirm" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Tem certeza que deseja remover este hábito?</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary btn-cancel" data-dismiss="modal">Não</button>
-          <button type="button" class="btn btn-primary btn-confirm">Sim</button>
-        </div>
+    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+      <div class="card-header">Ligar para Carla<div class="check custom-control custom-checkbox">
+        <input type="checkbox" class="check custom-control-input" id="1">
+        <label class="custom-control-label" for="1"></label>
+      </div></div>
+      <div class="card-body">
+        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>
       </div>
     </div>
-  </div>
+  
+    <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header">Ligar para Carla<div class="check custom-control custom-checkbox">
+          <input type="checkbox" class="check custom-control-input" id="2">
+          <label class="custom-control-label" for="2"></label>
+        </div></div>
+        <div class="card-body">
+          <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>
+        </div>
+      </div>    
+  </div>  
 
-  <div class="modal modal-new-habit" tabindex="-1" role="dialog">
+  <div class="modal modal-add" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Modal title</h5>
+          <h5 class="modal-title">
+            <form>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Título</label>
+                  <input type="text" class="task-title form-control" id="exampleFormControlInput1" value="">
+                </div>
+            </form>
+          </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -74,19 +56,21 @@
         <div class="modal-body">
           <form>
             <div class="form-group">
-              <input type="text" name="description" class="form-control" value="Run" placeholder="New Habit">
-            </div>  
-          </form>          
+              <label for="exampleFormControlTextarea1">Tarefa</label>
+              <textarea class="task-description form-control" id="exampleFormControlTextarea1" rows="10" value=""></textarea>
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary btn-cancel" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary btn-confirm">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn-save btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
