--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div></div>
       <div class="card-body">
         <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>
+        <i class="trash-icon far fa-trash-alt"></i>
       </div>
     </div>
   
@@ -33,6 +34,7 @@
         </div></div>
         <div class="card-body">
           <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>
+          <i class="trash-icon far fa-trash-alt"></i>
         </div>
       </div>    
   </div>  
@@ -64,6 +66,23 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn-save btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal-remove modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Excluir tarefa?</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn-remove btn btn-primary">Excluir</button>
         </div>
       </div>
     </div>
