Implement remove and add a card

--- a/index.html
+++ b/index.html
@@ -16,27 +16,25 @@
   </nav>
 
   <div class="container">
-    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-      <div class="card-header">Ligar para Carla<div class="check custom-control custom-checkbox">
-        <input type="checkbox" class="check custom-control-input" id="1">
+    <div class="card text-white bg-primary mb-3" id="card-1" style="max-width: 18rem;">
+      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Ligar para Carla<div class="check custom-control custom-checkbox">
+        <input type="checkbox" class="check custom-control-input">
         <label class="custom-control-label" for="1"></label>
       </div></div>
       <div class="card-body">
-        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>
-        <i class="trash-icon far fa-trash-alt"></i>
+        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>        
       </div>
     </div>
   
-    <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-        <div class="card-header">Ligar para Carla<div class="check custom-control custom-checkbox">
-          <input type="checkbox" class="check custom-control-input" id="2">
-          <label class="custom-control-label" for="2"></label>
-        </div></div>
-        <div class="card-body">
-          <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>
-          <i class="trash-icon far fa-trash-alt"></i>
-        </div>
-      </div>    
+    <div class="card text-white bg-secondary mb-3" id="card-2" style="max-width: 18rem;">
+      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Ligar para Carla<div class="check custom-control custom-checkbox">
+        <input type="checkbox" class="check custom-control-input">
+        <label class="custom-control-label" for="2"></label>
+      </div></div>
+      <div class="card-body">
+        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>        
+      </div>
+    </div>    
   </div>  
 
   <div class="modal modal-add" tabindex="-1" role="dialog">
