Background: set a image for a backgroud

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Minhas Tarefas</a>
-    <button type="button" class="btn-add btn btn-primary">Adicionar</button>
+    <button type="button" class="btn-add btn btn-info">Adicionar</button>
   </nav>
 
   <div class="container">
@@ -62,8 +62,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn-save btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn-save btn btn-primary">Salvar</button>
         </div>
       </div>
     </div>
