Implement new colors for new cards added

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
         </div>
       </div>
       <div class="card-body">
-        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>        
+        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado.</p>        
       </div>
     </div>
   
     <div class="card text-white bg-secondary mb-3" id="card-1" style="max-width: 18rem;">
-      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Ligar para Carla
+      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Comprar massa
         <div class="check form-group form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1"></label>
         </div>
       </div>
       <div class="card-body">
-        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>        
+        <p class="card-text">Comprar massa e molho de tomate para fazer a janta de sexta feira.</p>        
       </div>
     </div>
 
