Implement dislay block-inline

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="card-body">
-        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado.</p>        
+        <p class="card-text">Parabenizar Carla pela festa de aniversário incrível do sábado passado. </p>        
       </div>
     </div>
   
@@ -38,6 +38,54 @@
       </div>
       <div class="card-body">
         <p class="card-text">Comprar massa e molho de tomate para fazer a janta de sexta feira.</p>        
+      </div>
+    </div>
+
+    <div class="card text-white bg-success mb-3" id="card-1" style="max-width: 18rem;">
+        <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Ir ao mercado
+          <div class="check form-group form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1"></label>
+          </div>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Fazer a lista de mercado com os igredientes da festa.</p>        
+        </div>
+      </div>
+
+    <div class="card text-white bg-danger mb-3" id="card-1" style="max-width: 18rem;">
+      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Levar o cão ao veterinário
+        <div class="check form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1"></label>
+        </div>
+      </div>
+      <div class="card-body">
+        <p class="card-text">Levar o cão para tomar as vacinas V10 e rábica.</p>        
+      </div>
+    </div>
+
+    <div class="card text-white bg-warning mb-3" id="card-1" style="max-width: 18rem;">
+      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Buscar carrinho na Maria
+        <div class="check form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1"></label>
+        </div>
+      </div>
+      <div class="card-body">
+        <p class="card-text">Buscar o carrinho de bebê na Maria e se possível já levar seu presente</p>        
+      </div>
+    </div>
+
+    <div class="card text-white bg-info mb-3" id="card-1" style="max-width: 18rem;">
+      <div class="card-header"><i class="trash-icon far fa-trash-alt"></i>Escrever o artigo
+        <div class="check form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1"></label>
+        </div>
+      </div>
+      <div class="card-body">
+        <p class="card-text">Escrever o artigo sobre clean code para o Midium.</p>        
       </div>
     </div>
 
